--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -16,5 +16,5 @@
 @font-face {
   font-family: "Regular";
   src: local("TTNorms"),
-    url("../../../assets/fonts/TTNorms-Regular.otf") format("truetype");
+    url("../../assets/fonts/TTNorms-Regular.otf") format("truetype");
 }
