--- a/src/views/HomeView/index.css
+++ b/src/views/HomeView/index.css
@@ -1,5 +1,8 @@
-.Home-Container {
+.QR-Container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #131314;
+  color: white;
+  height: 82vh;
 }
-
-
